--- a/Report.tex
+++ b/Report.tex
@@ -6,8 +6,11 @@
 \usepackage{microtype}
 \usepackage{fancyhdr}
 \usepackage{amsmath}
+\usepackage[T1]{fontenc}
 \usepackage{amssymb}
 \usepackage[head=12pt,hmargin=3cm,vmargin=3cm]{geometry}
+
+\DisableLigatures[>,<]{encoding = T1,family=tt*} %
 
 \definecolor{codegray}{gray}{0.9}
 \newcommand{\code}[1]{\colorbox{codegray}{\texttt{#1}}}
@@ -40,8 +43,8 @@ The software used for the vocal synthesis is named \texttt{festival}. As mention
 \textbf{3. Which configuration should be made to modify this setting by a new one allowing the sending of the IP to your personal mailbox?}
 \newline
 \newline
-Before starting we would need to need to install and configure a mailing service we would chose "mailutils" in order to use "mail". We would simply have to add a line in the script a usage of "mail":
-\textbf{mail -s <subject of mail> <my mail address> < < < \$\{ <variable containing our IP>\} (or) hostname -I }
+Before starting one would need to need to install and configure a mailing service. One example to use is the \texttt{mailutils} which allows us to use the \code{mail} script. We would simply have to add a line in the script a usage of \code{mail}:
+\code{mail -s <subject\_of\_mail> <my\_mail\_address> <\$\{<\_IP>\}>}
 \newline
 \newline
 \noindent
@@ -56,23 +59,22 @@ When calling \code{ifconfig} without any arguments supplied to the call, one wil
 \newline
 \newline
 A build in command in Linux is the \code{iwlist}. This script is used to display additional information from a wireless interfaces. This will return quite a lot of information depending on how many networks are available around you. One way to shorten down the output to the terminal, is the \texttt{grep} only the \texttt{ESSID}, which is the SSID of the networks. The full command that one would run, to scan for surrounding networks, is then \code{iwlist wlan0 scan | grep ESSID}
-\newline
-\newline
+\newpage
 \noindent
-\textbf{6. Describe the content of the network configuration files \textff{/etc/wpa.conf} and \textff{/etc/network/interfaces}
+\textbf{6. Describe the content of the network configuration files \texttt{/etc/wpa.conf} and \\ \texttt{/etc/network/interfaces}
 and guess the relationship between them.}
 \newline
 \newline
-The \texttt{wpa.conf}
-wpa.conf lists saved network configurations with the name, ssid and hash of the password, wheras interfaces lists all the the possible connection to the diffrent interfaces with there valide parameters. We can act upon the default behaviours regarding connecting to networks.
+Starting off by looking at the network interfaces, in \texttt{/etc/network/interfaces}, we should be able to see all known network interfaces to the Raspberry Pi. On the first line, we see \code{auto wlan0}, which will start the wlan interface at boot. At the bottom of the file we see the line \code{allow-hotplug wlan0} and \code{iface wlan0 inet dchp} which allows wlan as a network connection method, and line \code{wpa-conf /etc/wpa.conf} set that as the configuration file to use for creating the network connection.
+The \texttt{wpa.conf} file then defines the network of which to connect, using the \code{ssid=<your\_network\_name>}, \code{\#psk=<your\_network\_passcode>}, and \\ \code{psk=<your\_network\_hashcode>} which can either be \texttt{RSN} or \texttt{WPA}.
 \newline
 \newline
 \noindent
 \textbf{7. How the setting of the above files can be changed in order to make your RPi recognizes your home
-WiFi network? If you do it, don’t forget to make backups !}
+WiFi network?}
 \newline
 \newline
-You would have to add an new configuration under network with ssid , password next to \#psk and our security key hash if we hade one under psk. This last would depend on the security our local networks security configuration, you would have to use the propur hash be it md5, shasum5 , ect ...
+One would change the \texttt{wpa.conf} file, with the a \texttt{SSID} and \texttt{passcode} that corresponds to ones home network. The reason one should take care doing so, and create a backup of the wpa.conf file, is that the security hash code would be lost. When setting it up at home, the last configuration would depend on the security of ones local network configuration. This hash code would have to be created on the user end using something like \texttt{MD5}, \texttt{SHA1}, \texttt{WPA/WPA2}, ect.
 \newline
 \newline
 \noindent
@@ -80,9 +82,6 @@ You would have to add an new configuration under network with ssid , password ne
 version of Raspbian provided by the Raspberry Pi foundation?}
 \newline
 \newline
-We would use the "dd" commande to create a bootable image with usage :
-\textbf{dd if=<input dir> of=<file to create with .img format> count=<size of file in Mbs>}.
-
-Later you can additionaly use \textbf{mkfs <filesystem> -F <file to format>} to format your created file for a diffrent file system.
+To create a image file in Linux, one can take use of the script \code{dd}. This can copy a file, convert, and format it according to some supplied operands. Converting a file or directory to a bootable image, we can then use the following command: \code{dd if=<input\_dir> of=<output\_file> bs=<block\_size>}. 
 
 \end{document}
