--- a/Test Lab/Report.tex
+++ b/Test Lab/Report.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,oneside,onecolumn]{article}
 \usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{mathtools}
 \usepackage{color}
 \usepackage{siunitx}
@@ -107,11 +108,12 @@ One can create an alias using echo and redirecting it to the shell configuration
 \textbf{5. Propose a command that displays the middle line of \texttt{/etc/passwd} ?}
 \newline
 \newline
-In this commande we are using \code{wc -l} to get the line count of file \texttt{/etc/passwd} and storing it in a bash variable named NUM. Then we are dividing NUM by two \code{expr \$NUM /2} and start grabbing the line starting from this new line count with \code{head -n \$NUM /etc/passwd}. In order to only grabe one line from this line on we pipe the output to \code{tail -1}, witch grabe only the first line.
+In this commande we are using \code{wc -l} to get the line count of file \texttt{/etc/passwd} and storing it in a bash variable named NUM. Then we are dividing NUM by two \code{expr \$NUM / 2} and start grabbing the line starting from this new line count with \code{head -n \$NUM /etc/passwd}. In order to only grab one line from this line, we pipe the output to \code{tail -1}, witch grab only the first line.
 \newline
-\begin{lstlisting}[language=bash,caption={bash version}]
+\begin{lstlisting}[language=bash]
 NUM=$(wc -l </etc/passwd)&&NUM=$(expr $NUM / 2 )&& head -n $NUM /etc/passwd | tail -1
 \end{lstlisting}
+
 \noindent
 \textbf{6. How to change the owner of a first file to the owner of a second one by using a command substitution based on the command \code{ls} and \code{cut} ?}
 \newline
@@ -128,49 +130,35 @@ whom UID is multiple of 2?}
 \newline
 \newline
 We use \code{grep} line by line on \texttt{/etc/passwd} and select all the UID's that finish by either 0,2,4,6,8. Then we pipe the output to cut where we delimite the output with \textbf{:} and select only the first match \code{cut -d: -f1}.
-\begin{lstlisting}[language=bash,caption={bash version}]
-grep '\^[\^:]*:[\^:]*:[0-9]*[02468]:.' /etc/passwd | cut -d: -f1)
-\end{lstlisting}
+\newline
+\newline
+\code{grep '\^[\^:]*:[\^:]*:[0-9]*[02468]:.' /etc/passwd | cut -d: -f1)}
+
 \noindent
-\textbf{2. Propose a grep command that displays  from the output of \code{ifconfig}
-, the WiFi IP address?}
+\textbf{2. Propose a grep command that displays from the output of \code{ifconfig}, the WiFi IP address?}
 \newline
 \newline
-To only display the wifi IP adresse we first only printed out the content of wlan0\footnote{Refers to the wifi hardware.}, then used \code{grep 'inet '} to select the line where the ipv4 IP addresse is displayed. Notice we added a space behinde inet, this was to avoid matching inet6. Afterwards we piped the output to \code{awk \$2} in order to select only the second motif\footnote{By default seperation of \code{awk} is the space, this can be changed with the \code{-F} argument.}, here our IP.
-\begin{lstlisting}[language=bash,caption={bash version}]
-sudo ifconfig wlan0 | grep 'inet '| awk '{print \$2}')
-\end{lstlisting}
+To only display the wifi IP adresse we first only printed out the content of wlan0\footnote{Refers to the wifi hardware.}, then used \code{grep 'inet '} to select the line where the IPv4 IP addresse is displayed. Notice we added a space behind \texttt{inet}. This was to avoid matching inet6. Afterwards we piped the output to \code{awk \$2} in order to select only the second motif\footnote{By default seperation of \code{awk} is the space, this can be changed with the \code{-F} argument.}, here our IP.
+\newline
+\newline
+\code{sudo ifconfig wlan0 | grep 'inet '| awk '{print \$2}')}
 
 \noindent
 \section*{Shell Script}
 \noindent
-\textbf{Write a Shell script that displays the entries of
-\texttt{/etc/passwd}
-, using
-\code{sed}
-and
-\code{for}
-loops, as follows:
+\textbf{Write a Shell script that displays the entries of \texttt{/etc/passwd}, using\code{sed} and \code{for} loops}
 \newline
-i) Username:  <username>, Passwrd:  encrypted, UID: <uid>, GID: <gid>, Home:  <home
-directory>
 \newline
-where i
-is the line number of the corresponding
-<username>
-in
-\texttt{
-/etc/passwd}
-}
+\texttt{Username: <username>, Password: encrypted, UID: <uid>, GID: <gid>, Home: <home\_directory>}
+\newline
+where \emph{i} is the line number of the corresponding <username> in \texttt{/etc/passwd}.
 \newline
 \newline
 The script for this can be found in the \texttt{script} folder under the name \texttt{script3.sh}.
 \newline
-In this script we are using the \code{for} loop to read the file \texttt{/etc/passwd} line by line. Also we have a local value 
-\code{i} to keep trake of the line number.  For the \code{sed} commande we identifing substrings with our regex \code{\\(<match substring>\\)}and refrencing them latter with \code{\\<number>} pattern
+In this script we are using the \code{for} loop to read the file \texttt{/etc/passwd} line by line. Also we have a local value \code{i} to keep trake of the line number. For the \code{sed} commande we identifing substrings with our regex \code{\\(<match substring>\\)}and refrencing them latter with \code{\\<number>} pattern in the latter part of our commande where we re-define the output format.
 %\footnote{We found out about this usage of sed with manual page \url{http://www.grymoire.com/Unix/Sed.htmluh-48}.} 
-in the latter part of our commande where we re-define the output format.
-\begin{lstlisting}[language=bash,caption={bash version}]
+\begin{lstlisting}[language=bash,caption={RegEx in Shell Script}]
 #!/bin/bash
 
 #init i
@@ -178,31 +166,40 @@ i=1
 #read line by line
 for line in $(cat /etc/passwd)
 do
-    i=$((i+1))#increment i
+    #increment i
+    i=$((i+1))
+
     #parse and modify output stream with sed
     echo $i":"$line | sed  's/^\([^:]*\):\([^:]*\):\([^:]*\):\([0-9]*\):\([0-9]*\)::\([^:]*\).*/\1) Username: \2 ,Password: encrypted, UID: \4, GID: \5, Home: \6/'
 done
 \end{lstlisting}
 
-\noindent
-\section*{GNU Make}
-In order to compile both nativly and cross-compile for out rassberypi we check at the beging of our makefile for the variable \code{CROSS COMPILE}. If it is set we compile with the cross compilation toolchain that we have stored in tools from our linux kernel compilation lab located in \texttt{<it depends>/kernel labs/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-}. If not this variable will not be set and we will be using the machines standard compiler: gcc or g++ , depending on the value given to \code{TMPGCC} at the begging of the makefile.\newline
-To access \code{CROSS COMPILE} in the makefile we have to make sure the variable is exported to the bash \code{export CROSS COMPILE}.
-\newline
-The rest of the makefile is very standard : we generate object files based on there .c files and link them together to create our executable main. To clean we select all object file \code{*.o} and delete them as well as our generated executable.
 
-\begin{lstlisting}[language=bash,caption={bash version}]
+\section*{GNU Make}
+
+\noindent
+In order to compile both nativly and cross-compile for out RaspberryPi we check at the start of our makefile for the variable \code{CROSS\_COMPILE}. If set, we compile with the cross compilation toolchain that we have stored in tools from our linux kernel compilation lab located in \texttt{/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-}. If not, this variable will not be set and we will be using the machines standard compiler: gcc or g++ , depending on the value given to \code{TMPGCC} at the start of the makefile.
+\newline
+To access \code{CROSS\_COMPILE} in the makefile we have to make sure the variable is exported to the bash \code{export CROSS\_COMPILE}.
+\newline
+The rest of the makefile is very standard; we generate an object files based on ther .c files and link them together to create our executable main. To clean we select all object file \code{*.o} and delete them as well as our generated executable.
+
+\begin{lstlisting}[language=bash,caption={MinMax Makefile}]
+# if we wanted to cross compile to rpi we would use the toolchain we have downloaded for the kernel compilation : arm-linux-gnueabi-gcc, but to use it we would have to specify a path. In our case we have exported the path to the folder in the vaiable CROSS_COMPILE
+
 TMPGCC=gcc
-#if we wanted to cross compile to rpi we would use the toolchain we have downloaded for the kernel compilation : arm-linux-gnueabi-gcc, but to use it we would have to specify a path. In our case we have exported the path to the folder in the vaiable CROSS_COMPILE
+
 ifeq (${CROSS_COMPILE},'')
-echo "CROSS_COMPILE is not set";
-GCC=${TMPGCC}
+    echo "CROSS_COMPILE is not set";
+    GCC=${TMPGCC}
 else
-#to avoid recursice refrencing to GCC variable
-GCC=${CROSS_COMPILE}${TMPGCC}
+    # to avoid recursice refrencing to GCC variable
+    GCC=${CROSS_COMPILE}${TMPGCC}
 endif
+
 ADD=minmax
 DEPS=minmax${HEADER_SUFFIX}
+
 all: main
 
 main: main.o minmax.o
@@ -215,11 +212,8 @@ minmax.o: minmax.c minmax.h
 	${GCC} -c minmax.c
 clean:
 	rm -f *.o main
-
 \end{lstlisting}
 
-
-\noindent
 \section*{Managing Process, System Call \code{fork()}}
 
 \noindent
