--- a/Lab4/Report.tex
+++ b/Lab4/Report.tex
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Test Lab \\ Linux Shell / GNU Make \\ Embedded Linux}
+\title{Lab 4 \\ Kernel Patching and Cross-Compilation for RPi \\ Embedded Linux}
 \author{Julia Desmazes \\ Michael Nissen}
 \date{\today}
 \maketitle
