Added image to section 3

--- a/Lab4/Report.tex
+++ b/Lab4/Report.tex
@@ -150,11 +150,14 @@ host$ zcat -c config.gz > .config
 Now that one has created a default \texttt{.config} file, it is time to costumise the kernel using the \code{sudo make menuconfig} which opens the GUI seen in Figure \ref{fig:menuconfig}. For the purpose of this lab assignment, we are going to enable the \texttt{Fully Preemptible Kernel} setting, and the \texttt{High Resolution Timer Support}.
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.95\textwidth]{resources/menuconfig.png}
+	\includegraphics[width=0.95\textwidth]{resources/meunconfig.png}
 	\caption{The \texttt{menuconfig} GUI}
 	\label{fig:menuconfig}
 \end{figure}
 
+\newpage
 \section{Build the new Kernel and Modules}
+
+To build the kernel,
 
 \end{document}
