--- a/Lab5/Report.tex
+++ b/Lab5/Report.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,oneside,onecolumn]{article}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage{mathtools}
 \usepackage{color}
 \usepackage{siunitx}
@@ -8,7 +9,6 @@
 \usepackage{fancyhdr}
 \usepackage{amsmath}
 \usepackage{listings}
-\usepackage[T1]{fontenc}
 \usepackage{amssymb}
 \usepackage{}
 \usepackage[head=12pt,hmargin=2.5cm,vmargin=2.5cm]{geometry}
@@ -50,200 +50,192 @@
 
 \begin{document}
 
-\title{Lab 4 \\ Kernel Patching and Cross-Compilation for RPi \\ Embedded Linux}
+\title{Lab 5 \\ GPIO and Interrupt Management Using Kernel Modules \\ Embedded Linux}
 \author{Julia Desmazes \\ Michael Nissen}
 \date{\today}
 \maketitle
 \bigskip
 
-\section{Download / Set the good version of Linux sources}
+\section{Configurable LED Blink Module}
 
-\noindent }
-To execute the tasks for this report, the first step is to get the Raspberry Pi cross-compilation tools, and specific version of the linux kernal that one wants to patch. This is going to be done using \code{git clone}, which ofcourse assumes a working installation of \texttt{git}.
-\newline
-To get the latest version of the kernel source code and the cross-compilation tools, the following commands with be copied to the terminal:
-\begin{lstlisting}[language=shell]
-	git clone https://github.com/raspberrypi/tools.git
-	git cone -b rpi-4.4.y https://github.com/raspberrypi/linux.git
-\end{lstlisting}
-One now has to make sure to get the same configuration as is used by ones Raspberry Pi during the kernel compilation, which can be done by checking out the \texttt{git branch} that corresponds to the hash of the Linux kernel running on the Raspberry Pi.
-\newline
-This will be done by by running the shells script seen in Code Snippet \ref{lst:git_hash}. This shell script will grep the firmware hash found on the Raspberry pi, and then get the \texttt{git hash} from the github link relative to the hardware hash.
-\begin{lstlisting}[language=shell, caption={Shell script to get Linux kernel git hash}, label={lst:git_hash}]
-#!/bin/bash
+\subsection{Simple GPIO Blink Module}
 
-PLATFORM=`uname -s` 
-
-if [ ${PLATFORM} = "Darwin" ]
-then
-    CMD="gunzip -c"
-elif [ ${PLATFORM} = "Linux" ]
-then
-    CMD="zcat"
-else
-    echo "Sorry, the platform ${PLATFORM} is not supported !!!"    
-    exit -1
-fi
-
-FWHASH=`${CMD} /usr/share/doc/raspberrypi-bootloader/changelog.Debian.gz | grep -m 1 'as of' | awk '{print $NF}'`
-#echo "Firmware Hashcode: fwhash = $FWHASH"
-
-LINUXHASH=`wget -qO- https://raw.github.com/raspberrypi/firmware/$FWHASH/extra/git_hash`
-
-echo "Linux Hashcode: linuxhash = $LINUXHASH"
-\end{lstlisting}
-When one has figured out the \texttt{git hash}, one can change directory to the linux git repository and checkout the respective brach by the following command: 
-\begin{lstlisting}[language=shell]
-cd linux
-git checkout <git_hash>
-\end{lstlisting}
-
-\section*{The \code{grep}/\code{sed} and Ragular Expressions}
-
-\noindent 
-\textbf{1. Propose a \code{grep} command that displays user names in \texttt{/etc/passwd}
-whom UID is multiple of 2?}
-\newline
-\newline
-We use \code{grep} line by line on \texttt{/etc/passwd} and select all the UID's that finish by either 0,2,4,6,8. Then we pipe the output to cut where we delimite the output with \textbf{:} and select only the first match \code{cut -d: -f1}.
-\newline
-\newline
-\begin{lstlisting}[language=bash]
-grep '\^[\^:]*:[\^:]*:[0-9]*[02468]:.' /etc/passwd | cut -d: -f1
-\end{lstlisting}
+\subsection{sysfs-based User Interface}
 
 \noindent
-\textbf{2. Propose a grep command that displays from the output of \code{ifconfig}, the WiFi IP address?}
+The goal here is to create a \texttt{sysfs}-based user interface that allows the user to change the LED blinking frequency at runtime. When the module is loading, it is initially going to display a message and blink the LED using a default timer with a period of 1 second.
+\newline
+In the Code Snippet 1 below, we can see the \code{\_\_init} function, that is a macro used to mark some functions or initialized data as an `initialisation' function. The kernel can then take this as a hint that the function is used only during the initialisation phase, and free up used memory resources after. Essentially, the kernel build system looks for all of the functions flagged with \code{\_\_init}, across all of the pieces of the kernel, and arranges them so that they will all be in the same block of memory. Then, when the kernel boots, it can free that one block of memory at once.
 \newline
 \newline
-To only display the wifi IP adresse we first only printed out the content of wlan0\footnote{Refers to the wifi hardware.}, then used \code{grep 'inet '} to select the line where the IPv4 IP addresse is displayed. Notice we added a space behind \texttt{inet}. This was to avoid matching inet6. Afterwards we piped the output to \code{awk \$2} in order to select only the second motif\footnote{By default seperation of \code{awk} is the space, this can be changed with the \code{-F} argument.}, here our IP.
+The code starts by printing a message to the terminal. It is then requsting a single \texttt{GPIO} pin with an initial setup using the \code{gpio\_request\_one}. As seen in the comments for the code, it takes the arguments of the \texttt{GPIO} pin number, a flag the specified the initial \texttt{GPIO} configuration, and a label with a literal description string of this \texttt{GPIO}. The rusult is stored in a global \code{result} variable, that we can use to check if the request and initialisation of the \texttt{GPIO} pin was successful or not. If \code{result} is not 0, it will print error message to the terminal saying that it could not initialise the \texttt{GPIO} pin, otherwise it will print a statement saying it was successfull.
 \newline
+We then initialise our timer by \code{init\_timer(\&my\_timer)}, set an expiration time (1 second), and define what function will be executed once the timer expires. We want to execute our \code{blink\_timer} function, that handles the blinking. We that print out a status message saying that the timer has been initialised, and start the timer.
 \newline
-\begin{lstlisting}[language=bash]
-sudo ifconfig wlan0 | grep 'inet '| awk '{print \$2}'
-\end{lstlisting}
-\noindent
-\section*{Shell Script}
-\noindent
-\textbf{Write a Shell script that displays the entries of \texttt{/etc/passwd}, using\code{sed} and \code{for} loops}
-\newline
-\newline
-\texttt{Username: <username>, Password: encrypted, UID: <uid>, GID: <gid>, Home: <home\_directory>}
-\newline
-where \emph{i} is the line number of the corresponding <username> in \texttt{/etc/passwd}.
-\newline
-\newline
-The script for this can be found in the \texttt{script} folder under the name \texttt{script3.sh}.
-\newline
-In this script we are using the \code{for} loop to read the file \texttt{/etc/passwd} line by line. Also we have a local value \code{i} to keep trake of the line number. For the \code{sed} commande we identifing substrings with our regex \code{\\(<match substring>\\)}and refrencing them latter with \code{\\<number>} pattern in the latter part of our commande where we re-define the output format.
-%\footnote{We found out about this usage of sed with manual page \url{http://www.grymoire.com/Unix/Sed.htmluh-48}.} 
-\begin{lstlisting}[language=bash,caption={RegEx in Shell Script}]
-#!/bin/bash
+The timer LED should now be starting with an initial configuration of \texttt{HIGH}, and blinking on and off every 1 second.
+\begin{lstlisting}[language=c, label={lst:initial_blink}, caption={Initial configuration of LED}]
+static int __init start_blink(void) {
 
-#init i
-i=1
-#read line by line
-for line in $(cat /etc/passwd)
-do
-    #increment i
-    i=$((i+1))
+    printk("Blink :: start module :\n");
 
-    #parse and modify output stream with sed
-    echo $i":"$line | sed  's/^\([^:]*\):\([^:]*\):\([^:]*\):\([0-9]*\):\([0-9]*\)::\([^:]*\).*/\1) Username: \2 ,Password: encrypted, UID: \4, GID: \5, Home: \6/'
-done
-\end{lstlisting}
+    // Request a single GPIO with initial configuration HIGH: <PIN, FLAGS, label>
+    result = gpio_request_one(GPIO_PIN_NUMB, GPIOF_OUT_INIT_HIGH, "sysfs");
 
+    if (result) {
 
-\section*{GNU Make}
+        printk(KERN_INFO "ERROR :: Failed to initialise the GPIO PIN: %d\n", GPIO_PIN_NUMB);
 
-\noindent
-In order to compile both nativly and cross-compile for out RaspberryPi we check at the start of our makefile for the variable \code{CROSS\_COMPILE}. If set, we compile with the cross compilation toolchain that we have stored in tools from our linux kernel compilation lab located in \texttt{/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-}. If not, this variable will not be set and we will be using the machines standard compiler: gcc or g++ , depending on the value given to \code{TMPGCC} at the start of the makefile.
-\newline
-To access \code{CROSS\_COMPILE} in the makefile we have to make sure the variable is exported to the bash \code{export CROSS\_COMPILE}.
-\newline
-The rest of the makefile is very standard; we generate an object files based on ther .c files and link them together to create our executable main. To clean we select all object file \code{*.o} and delete them as well as our generated executable.
-
-\begin{lstlisting}[language=bash,caption={MinMax Makefile}]
-# if we wanted to cross compile to rpi we would use the toolchain we have downloaded for the kernel compilation : arm-linux-gnueabi-gcc, but to use it we would have to specify a path. In our case we have exported the path to the folder in the vaiable CROSS_COMPILE
-
-TMPGCC=gcc
-
-ifeq (${CROSS_COMPILE},'')
-    echo "CROSS_COMPILE is not set";
-    GCC=${TMPGCC}
-else
-    # to avoid recursice refrencing to GCC variable
-    GCC=${CROSS_COMPILE}${TMPGCC}
-endif
-
-ADD=minmax
-DEPS=minmax${HEADER_SUFFIX}
-
-all: main
-
-main: main.o minmax.o
-	${GCC} -o main minmax.o main.o
-
-main.o: main.c minmax.h
-	${GCC} -c main.c
-
-minmax.o: minmax.c minmax.h
-	${GCC} -c minmax.c
-clean:
-	rm -f *.o main
-\end{lstlisting}
-
-\section*{Managing Process, System Call \code{fork()}}
-
-\noindent
-The system call \code{fork()} is used to create processes and returns a process ID. When calling \code{fork()}, it creates a new process which becomes a \textit{child} process of the caller. After a child process has been created, both the \textit{child} and \textit{parent} process will execute the next instruction following the \code{fork()} system call. Therefore, one has to distingush the difference between the two processes.
-\newline
-This can be done by testing the process ID returned by the system call.
-\newline
-\newline
-If \code{fork()} returns a negative value, the creation of a child process was unsuccessful. It will return a zero to the newly created \textit{child} process, and it will return a possitive value, the \texttt{pid} of the \textit{child} process, to the parent.
-\newline
-\newline
-Therefore it is simple to check what which is the child process - this can be seen in Code Snippet 1 below.
-\begin{lstlisting}[language=c, caption=Managing system calls]
-#include <stdio.h>
-#include <sys/types.h>
-#include <unistd.h>
-
-int main() {
-
-    // The process ID
-    pid_t pid;
-
-    // Store the process ID
-    pid = fork();
-
-    // Check for the process ID
-    if (pid == 0) {
-
-        // Child process
-
-        // Create a new fork
-        pid = fork();
-
-        // Check for the process ID
-        if (pid == 0) {
-
-            // Grand child process
-            printf("Child of Child");
-        } else {
-
-            // Child process
-            printf("Child");
-        }
+        return result;
     } else {
 
-        // This is the parent process
-        printf("Parent");
+        printk(KERN_INFO "SUCCESS :: GPIO PIN was successfully allocated\n");
     }
+
+    // Initialise the timer
+    init_timer(&my_timer);
+
+    // Set expiration time in jiffies - convert period to milliseconds
+    my_timer->expires = jiffies + HZ*period/1000;
+
+    // Define the function to be executed upon timer expire
+    my_timer->function = blink_timer;
+
+    my_timer->data = 0;
+
+    printk(KERN_INFO "STATUS :: The timer has been initialised\n");
+
+    // Start the timer
+    add_timer(&my_timer);
+
+    ...
 }
 \end{lstlisting}
 
+Now that we have our initial configuration up and running, we want to register a device class. A class is a higher-level view of a device that abstracts out low-level implementation details and can be found in \texttt{syfs} under the \texttt{/sys/class/} folder. In many cases, the class subsystem is the best way of exporting information to the user space. When a subsystem creates a class, it owns the class entirely, so there is no need to worry about which module owns the attributes found there.
+\newline
+A class is defined by an instance of \code{struct} class. Each class needs a unique name, which is how the class appears under \texttt{/sys/class}.
+\newline
+\newline
+If we take a look at Code Snippet 2, we start off by creating a \code{struct} class structure using the \code{class\_create} function. We pass in the module that owns the class, and a unique string for the name of the class - this is defined in the \code{\#define CLASS\_NAME} at the start of the code. We then check if there was an error creating the class - if there was, we print out an error message saying that the creation of the device class has failed and return the error, otherwise we print a success statement, saying it was created.
+\newline
+\newline
+We then go on to register the device object with \texttt{sysfs} using the \code{device\_create} which takes as arguments, the class it should be registered to, the parent struct device, the \texttt{dev\_t} to be added, and a unique string for the device name. As name of the class has been defined as \texttt{external\_led} and the name of the device \texttt{blink}, the device object can be found under \texttt{/sys/class/external\_led/blink}.
+\newline
+As usual, we check if the device object was created successfully and if not we destroy the \code{struct} class structure with the \code{class\_destroy} and print the error message, else we print a success message.
+
+\begin{lstlisting}[language=c, label={lst:device}, caption={Registering Device Class and Object}]
+#define DEVICE_NAME "blink"
+#define CLASS_NAME  "external_led"
+
+static int __init start_blink(void) {
+
+    ...
+
+    // Create a struct class structure <Module that owns the class, String for the name of the class>
+    external_leds = class_create(THIS_MODULE, CLASS_NAME);
+
+    if (IS_ERR(external_leds)) {
+
+        printk(KERN_ERR "ERROR :: Failed to create device class\n");
+
+        return PTR_ERR(external_leds);
+    } else {
+
+        printk(KERN_INFO "SUCCESS :: EXTERNAL_LEDS :: Device class was successfully created\n");
+    }
+
+    // Create a device and register it with sysfs:
+    // <Class it should be registered to, Parent struct device, dev_t to be added, String for device name>
+    blink = device_create(external_leds, NULL, 0, NULL, DEVICE_NAME);
+
+    if (IS_ERR(blink)) {
+
+        // Destroy the struct class structure if the was an error
+        class_destroy(external_leds);
+
+        printk(KERN_ERR "ERROR :: Failed to create the device\n");
+
+        return PTR_ERR(blink);
+    } else {
+
+        printk(KERN_INFO "SUCCESS :: Device class created successfully\n");
+    }
+
+    ...
+}
+\end{lstlisting}
+
+We now go on to create a \texttt{sysfs} attribute file for the device using the \code{device\_create\_file()} which takes the device created with \code{device\_create()} and the device attribute descriptor as arguments. The device attribute descritor is a function, The device attribute descriptor is a file, that if an interger is writton to it, it can later be read out. A simple attribute has no means by which it can be read or written to - it needs wrapper routines for reading and writing. For this purpose, \texttt{kobjects} defines a special structure \code{struct kobj\_attribute} where the first argument represents the name of the attribute file, the second argument is the file permission (0644 which is read/write for the owning user and read for group/other), the third argument is the function to be called when the file is read, and the last argument is the function to be called when the file is written.
+\newline
+\newline
+We define the name, permission, and functions to be executed when using the attribute file, and then we create the device file passing in the device and the pointer to the address of the the \code{kobj\_attribute}. We then check if the device file was succesfully created or not, and print out a relevant message depending on the result.
+\newline
+As we gave the file the name \texttt{period}, it can be written to by echoing an integer value into the file placed in \texttt{/sys/class/external\_led/blink/period}.
+
+\begin{lstlisting}[language=c, label={lst:sysfs}, caption={Creating a \texttt{sysfs} attribute file}]
+// Device attribute descriptor: <attribute name, permission, function, function>
+static struct kobj_attribute period_attr = __ATTR(period, 0644, NULL, store_period);
+
+static int __init start_blink(void) {
+
+    ...
+
+    // Create sysfs attribute file for device: <device, device attribute descriptor>
+    result = device_create_file(blink, &period_attr);
+
+    if (result) {
+
+        printk(KERN_ERR "ERROR :: Failed to create the sysfs file\n");
+    } else {
+
+        printk(KERN_INFO "SUCCESS :: sysfs file successfully created\n");
+    }
+
+    ...
+
+}
+\end{lstlisting}
+
+By unloading the module, the extention shall delete the \texttt{sysfs}-based interface, display a termination message, delete the timer, stop blinking the LED, and release the \texttt{GPIO} request. All of this is done using the \code{\_\_exit} macro. The \code{\_\_exit} macro is used to deallocate any and all resources it has acquired, as well as any hardware it may have activated. The exit routine is the last chance that the module has to perform these operations, or it may leave the system in an unstable state.
+\newline
+\newline
+Taking a look at the code in Code Snippet 3, we start by setting a value of low on the \texttt{GPIO} pin to turn off the LED, we free up the \texttt{GPIO} pin, deactivate the timer, remove and unregister the device class and object, destroying the class structure and removing the \texttt{sysfs} attribute file from its own method.
+
+\begin{lstlisting}[language=c, label={lst:exit}, caption={Unloading of the Module}]
+static void __exit stop_blink(void) {
+
+    // Turn off LED
+    gpio_set_value(GPIO_PIN_NUMB, LED_OFF);
+
+    printk(KERN_INFO "BLINK :: LED turned OFF\n");
+
+    // Free the GPIO PIN
+    gpio_free(GPIO_PIN_NUMB);
+
+    printk(KERN_INFO "BLINK :: GPIO freed\n");
+
+    // Deactivate the timer
+    del_timer(&my_timer);
+
+    printk(KERN_INFO "BLINK :: Timer deactivated\n");
+
+    // Remove the device created by device_create
+    device_destroy(external_leds, 0);
+
+    // Unregister the previously registered class
+    class_unregister(external_leds);
+
+    // Destroy the struct class structure
+    class_destroy(external_leds);
+
+    // Remove sysfs attribute file from its own method
+    device_remove_file(blink, &period_attr);
+
+    printk(KERN_INFO "BLINK :: The module has been unloaded\n");
+}
+\end{lstlisting}
+
+\section{Button-Controlled LED Blink Module}
 
 
 \end{document}
